@@ -1,3 +1,8 @@
+2020-05-21  Martin Liska  <mliska@suse.cz>
+
+	* gcc.target/aarch64/target_attr_20.c: New test.
+	* gcc.target/aarch64/target_attr_21.c: New test.
+
 2020-05-20  Jozef Lawrynowicz  <jozef.l@mittosystems.com>
 
 	* g++.dg/warn/Wconversion-null-2.C: Add explicit declarations for l()
